--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,9 @@
   ],
   "license": "MIT",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "tests"
+    "*",
+    "!dist/",
+    "!dist/*",
+    "!README.md"
   ]
 }
